# octavius

./: .gitignore  ENCAPSULATION.md  README.md  pyproject.toml
jobs/download-ue5/: README.md  work.md
octavius/: bus.py  config.py  daemon.py  desktop_app.py  graph.py  jobs.py  journal.py  mcp_server.py  menubar.py  web.py
octavius/capabilities/: __init__.py  app.py  binary.py  chrome.py  discover.py  epic.py  filesystem.py  legendary.py  shell.py  ue5.py  ui.py  vision.py  volume.py
octavius/ui/: index.html
scripts/: build_app.py  build_dmg.sh  install.sh
web/: .env.example  .gitignore  README.md  auth.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/auth/[...nextauth]/: route.ts
web/app/api/extensions/: route.ts
web/app/api/license/issue/: route.ts
web/app/api/license/verify/: route.ts
web/app/api/membership/redeem/: route.ts
web/app/dashboard/: page.tsx
web/app/dashboard/[slug]/: page.tsx
web/app/dashboard/new/: page.tsx
web/app/extensions/[slug]/: page.tsx
web/app/login/: page.tsx
web/app/marketplace/: page.tsx
web/components/: About.tsx  Arms.tsx  Capabilities.tsx  ClaimBox.tsx  Creators.tsx  Demo.tsx  Download.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Marketplace.tsx  Nav.tsx  Problem.tsx
web/lib/: db.ts  extensions.ts  ids.ts
web/prisma/: schema.prisma  seed.ts
