[project]
name = "octavius"
version = "0.1.0"
description = "Host bus for Claude — graph, journal, approvals, capabilities."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "psutil>=5.9",
    "pydantic>=2.6",
    "httpx>=0.27",
    "sse-starlette>=2.0",
]

[project.scripts]
octavius-bus = "octavius.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["octavius"]
